force-app/main/default/objects/AI_Agent__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AI Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Connection__c.Type__c</field>
            <operation>equals</operation>
            <value>Agentic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>Agents</relationshipLabel>
    <relationshipName>Agents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>