force-app/main/default/objects/AI_Agent__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>