force-app/main/default/objects/AI_Agent__c/fields/RAG__c.field-meta.xml
<CustomField>
    <fullName>RAG__c</fullName>
    <label>RAG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>