force-app/main/default/objects/AI_Agent__c/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <label>System Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>