force-app/main/default/objects/AI_Agent__c/fields/TTL__c.field-meta.xml
<CustomField>
    <fullName>TTL__c</fullName>
    <label>TTL (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>