force-app/main/default/objects/AI_Agent__c/fields/TTL_Message__c.field-meta.xml
<CustomField>
    <fullName>TTL_Message__c</fullName>
    <label>TTL Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>