force-app/main/default/objects/AI_Agent__c/fields/Use_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Use_Thread_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Thread Id</label>
    <type>Checkbox</type>
</CustomField>