force-app/main/default/objects/AI_Agent__c/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Welcome Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>